force-app/main/default/objects/Dispute/fields/TotalRecoveryAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalRecoveryAmount__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Sum Total of Recovery Amount in the DisputeItem records. Recovery Amounts are the recovered  amount entered by the Agent which is actually recovered.</description>
    <label>Total Recovery Amount</label>
    <summarizedField>DisputeItem.RecoveryAmount__c</summarizedField>
    <summaryForeignKey>DisputeItem.DisputeId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>