force-app/main/default/objects/Dispute/fields/TotalTransactionAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalTransactionAmount__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Sum Total of Amount in the DisputeItem records. Transaction Amounts are the actual amount for which the transactions are raised.</description>
    <label>Total Transaction Amount</label>
    <summarizedField>DisputeItem.TransactionAmount</summarizedField>
    <summaryFilterItems>
        <field>DisputeItem.RecoveryStatus__c</field>
        <operation>notEqual</operation>
        <value>Pending OFI Response</value>
    </summaryFilterItems>
    <summaryForeignKey>DisputeItem.DisputeId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>